Tasks added for datacontract-cli and dqx

--- a/orgs/acme/domains/transport/projects/taxinyc/flows/prep/dltrevenue/deployment.yml
+++ b/orgs/acme/domains/transport/projects/taxinyc/flows/prep/dltrevenue/deployment.yml
@@ -16,5 +16,5 @@
 #   pause_status: UNPAUSED
 pipeline_tasks:
 - pipeline_key: revenue
-  policy_name: dlt_default_policy
+  # policy_name: dlt_default_policy
   db: dltrevenue
