--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,6 @@ pytest = "*"
 pyspark = "*"
 requests = "*"
 pyyaml = "*"
-
+"datacontract-cli[databricks]" = "*"
 [requires]
 python_version = "3.10"
