--- a/libs/tests/dataops/deploy/mock_data/pipeline/deployment_prod.yml
+++ b/libs/tests/dataops/deploy/mock_data/pipeline/deployment_prod.yml
@@ -9,12 +9,6 @@
 # Delta Live Tables API: https://docs.databricks.com/data-engineering/delta-live-tables/delta-live-tables-api-guide.html
 
 ---
-schedule:
-  quartz_cron_expression: "27 0 16 ? * Thu"
-  timezone_id: Europe/Brussels
-  pause_status: UNPAUSED
-pipeline_task:
+pipeline_tasks:
 - pipeline_key: revenue
-  policy_name: dlt-default-policy
-  cluster_template: common-dlt
   db: dltrevenue
